--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jerry",
   "version": "0.1.0",
+  "homepage": "https://yinchyy.github.io/jerry",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,6 +52,7 @@
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.2.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "gh-pages": "^4.0.0"
   }
 }
